@startuml
!theme plain
title Diagramme de Classes - Your Car Your Way 

class User {
  - id : Long
  - email : String
  - password : String
  - firstName : String
  - lastName : String
  - dateOfBirth : Date
  - phoneNumber : String
  - address : String
  - drivingLicenseNumber : String
  - drivingLicenseCountry : String
  - drivingLicenseExpiry : Date
  - stripeCustomerId : String
  - createdAt : Date
}

class AdditionalDriver {
  - id : Long
  - firstName : String
  - lastName : String
  - drivingLicenseNumber : String
}

class Message {
  - id : Long
  - messageType : String
  - content : String
  - status : String
  - createdAt : Date
  - agentResponse : String
  - respondedAt : Date
}

class ChatConversation {
  - id : Long
  - agentId : Long
  - status : String
  - createdAt : Date
  - closedAt : Date
}

class ChatMessage {
  - id : Long
  - senderType : String
  - senderId : Long
  - content : String
  - sentAt : Date
}

class Vehicle {
  - id : Long
  - brand : String
  - model : String
  - year : Integer
  - licensePlate : String
  - dailyRate : BigDecimal
  - available : Boolean
  - photosUrls : String
  - optionalEquipment : String
}

class Booking {
  - id : Long
  - startDate : Date
  - endDate : Date
  - pickupLocation : String
  - returnLocation : String
  - totalAmount : BigDecimal
  - status : String
  - numberOfDrivers : Integer
  - selectedOptions : String
  - createdAt : Date
}

class Payment {
  - id : Long
  - amount : BigDecimal
  - currency : String
  - paymentMethod : String
  - transactionId : String
  - status : String
  - createdAt : Date
}

class Agency {
  - id : Long
  - name : String
  - address : String
  - phoneNumber : String
  - email : String
  - openingHours : String
  - gpsLatitude : BigDecimal
  - gpsLongitude : BigDecimal
  - servicesAvailable : String
  - accessibilityPmr : Boolean
  - photosUrls : String
  - averageRating : BigDecimal
  - equipment : String
}

class VehicleCategory {
  - id : Long
  - code : String
  - name : String
  - description : String
  - passengerCapacity : Integer
}

class Location {
  - id : Long
  - city : String
  - country : String
  - zipCode : String
}

' Relations principales
User ||--o{ AdditionalDriver : "gère"
User ||--o{ Booking : "fait"
User ||--o{ Message : "envoie"
User ||--o{ ChatConversation : "démarre"
ChatConversation ||--o{ ChatMessage : "contient"
Booking ||--|| Payment : "a"
Booking ||--|| Vehicle : "réserve"

' Relations véhicules et agences
Agency ||--o{ Vehicle : "possède"
VehicleCategory ||--o{ Vehicle : "catégorise"
Location ||--o{ Agency : "situe"

@enduml